tests/errors/e_assnone.pyx
cdef void spam():
	None = 42
_ERRORS = u"""
/Local/Projects/D/Pyrex/Source/Tests/Errors1/e_assnone.pyx:2:1: Cannot assign to or delete this
"""
